@@ -1,5 +1,9 @@
 2017-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/uil.c (WriteUILImage): Fix crash in UIL writer when
+	writing image containing transparency.  Issue was reported by
+	LCatro via email on 18 Jul 2017.
+
 	* coders/wpg.c (InsertRow): Fix crash which occurs if image is not
 	PseudoClass but a PseudoColor scanline is needed.  Resolves
 	SourceForge issue #449 "Null pointer dereference in InsertRow()".
